macros/tests/ui/declare/fix_attr_indirect_follow_host_fail.stderr
error: There is a directly circle depends exist, this will cause infinite loop: b.cursor ~> a , a.cursor ~> b
  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:23:11
   |
23 |       id: a,
   |           ^
24 |       size: Size::zero(),
25 |       cursor: b.cursor,
   |       ^^^^^^  ^
26 |       SizedBox {
27 |         id: b,
   |             ^
28 |         size: Size::zero(),
29 |         cursor: a.cursor
   |         ^^^^^^  ^
   |
note: You can use `change` event to break circle, which will trigger only if the value really changed by compare if the value equal before modify and after.
  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:25:7
   |
25 |       cursor: b.cursor,
   |       ^^^^^^
...
29 |         cursor: a.cursor
   |         ^^^^^^
